test/expressions/diten/returntypedottype.good
returntypedottype.chpl:5: error: can't apply '.type' to a type ('complex(128)')
